Hide ink-drop highlight on ripple on all platforms

As ink-drop ripples were recently enabled on all platforms (but
instantaneous on Mac) we need to hide the ink-drop highlight when
showing the ripple. This is because the highlight and ripple have
different shapes by default and we should not show one overlapping the
other.

Bug: chromium:851984
Change-Id: I0c5390d26a7faa3a3d39709cd52c4066adb22197
Reviewed-on: https://chromium-review.googlesource.com/1097800
Reviewed-by: Mohsen Izadi <mohsen@chromium.org>
Commit-Queue: Peter Boström <pbos@chromium.org>
Cr-Commit-Position: refs/heads/master@{#566903}
Former-commit-id: 5eed64e02c0948cb2ac5eb154f8087e9b625f01e